<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.core.libraries</groupId>
	<artifactId>CoreLibraries</artifactId>
	<version>1.0.0.RELEASE</version>
	<packaging>pom</packaging>

	<name>CoreLibraries</name>
	<description>Core Application Component Libraries - ExceptionHandle, Validator</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>17</java.version>

		<servlet-api.version>4.0.1</servlet-api.version>
		<spring.version>5.3.23</spring.version>
		<spring-security.version>5.7.3</spring-security.version>
		<spring-boot.version>2.7.4</spring-boot.version>
		<spring-data-redis.version>2.7.3</spring-data-redis.version>
		<jedis.version>4.2.3</jedis.version>
		<commons-pool2.version>2.11.1</commons-pool2.version>
		
		<junit.version>4.13.2</junit.version>
		<mockito-core.version>3.12.4</mockito-core.version>
		<commons-validator.version>1.7</commons-validator.version>
		<slf4j.version>1.7.32</slf4j.version>
		<logback.version>1.2.5</logback.version>
		<aspectj.version>1.9.9.1</aspectj.version>
		<gson.version>2.8.8</gson.version>
		<lombok.version>1.18.24</lombok.version>

		<maven.compiler-plugin.version>3.8.1</maven.compiler-plugin.version>
		<maven.checkstyle-plugin.version>3.1.2</maven.checkstyle-plugin.version>
		<maven.findbugs-plugin.version>3.0.5</maven.findbugs-plugin.version>
		<maven-pmd-plugin.version>3.14.0</maven-pmd-plugin.version>
	</properties>

	<modules>
		<module>exception-handler</module>
		<module>validator</module>
		<module>redis-caching</module>
		<module>encrypt-decrypt</module>
		<module>logger</module>
		<module>common-security-filter</module>
	</modules>


	<build>
		<!-- TODO: Remove this when transitioning from Packagecloud to Nexus repository for artifact management  -->
		<extensions>
			<extension>
				<groupId>io.packagecloud.maven.wagon</groupId>
				<artifactId>maven-packagecloud-wagon</artifactId>
				<version>0.0.6</version>
			</extension>
		</extensions>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler-plugin.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
						<path>
							<groupId>org.mapstruct</groupId>
							<artifactId>mapstruct-processor</artifactId>
							<version>1.5.2.Final</version>
						</path>
					</annotationProcessorPaths>
				</configuration>

			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>${maven.checkstyle-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>${maven.findbugs-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>${maven-pmd-plugin.version}</version>
				<configuration>
					<failOnViolation>false</failOnViolation> <!-- this is actually true by default, but can be disabled -->
					<printFailingErrors>true</printFailingErrors>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<configuration>
					<preparationGoals>clean install</preparationGoals>
					<autoVersionSubmodules>true</autoVersionSubmodules>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
			</plugin>
		</plugins>
	</reporting>

	<!-- TODO: Remove this when transitioning from Packagecloud to Nexus repository for artifact management  -->
	<distributionManagement>
		<repository>
			<id>packagecloud.release</id>
			<url>packagecloud+https://packagecloud.io/Bayvao/release</url>
		</repository>
		<snapshotRepository>
			<id>packagecloud.snapshot</id>
			<url>packagecloud+https://packagecloud.io/Bayvao/snapshot</url>
		</snapshotRepository>
	</distributionManagement>

</project>